# decipher

./: LICENSE.txt  README.md  pyproject.toml  setup.cfg
decipher/: cli.py  helper.py  html_table_parser.py  main.py  vimdoc_renderer.py
decipher/template/: header.txt  heading-level-1.txt  heading-level-2.txt  template.py
decipher/template/rune/: header.txt
decipher/template/stdlib/: header.txt
tests/: test_helper.py
