[tool.poetry]
name = "decipher"
version = "0.1.0"
description = ""
authors = ["Matthias Schaub <matthias.schaub@posteo.de>"]

[tool.poetry.scripts]
decipher = 'decipher.cli:cli'

[tool.poetry.dependencies]
python = "^3.10"
marko = "^1.2.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
